# cognitio

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md
.custom_git/hooks/: post-checkout
cmake/: CheckToolsOptions.cmake  CompilerWarnings.cmake  Coverage.cmake  FormatStaticAnalysys.cmake  GitSubmodule.cmake  GlobalVariables.cmake  Sanitizers.cmake
examples/repo1/: config  config.json  pins
examples/repo2/: config  config.json  pins
examples/repo3/: config  config.json
include/: add.h  math.h
include/cli/: cli.hpp
include/cli/commands/: command.hpp  response_emitter.hpp
include/common/: atomic_data.hpp  context.hpp  hasher.hpp  status.hpp  status_code.hpp
include/common/block/: block.hpp
include/common/concepts/: container.hpp
include/common/logger/: logger.hpp
include/common/multiformats/: cid.hpp  multihash.hpp
include/common/utils/: filesystem.hpp  hex_util.hpp  prefix_reader.hpp  repo.hpp
include/config/: config.hpp
include/core/: core.hpp
include/core/commands/: command_manager.hpp  context.hpp  core_root.hpp  local_emitter.hpp  root.hpp
include/core/commands/list/: add.hpp  daemon.hpp  get.hpp  init.hpp  remove.hpp  root.hpp
include/core/commands/list/debug/: cid.hpp  debug.hpp
include/core/commands/list/repo/: init.hpp  repo.hpp  reset.hpp
include/core/context/: context.hpp
include/core/core_api/: api_service.hpp  core_api.hpp  local_api.hpp  remote_api.hpp
include/datastore/: datastore.hpp  datastore_error.hpp  ds_fs.hpp
include/exchange/block_service/: block_service.hpp
include/exchange/block_swap/: block_swap.hpp  client.hpp
include/exchange/block_swap/rpc/: service.hpp
include/files/chunker/: chunker.hpp
include/files/unixfs/: unixfs.hpp
include/files/unixfs/proto_manager/: proto-manager.hpp  unixfs.pb.cc  unixfs.pb.h
include/grpc_wrapper/client/: client.hpp
include/grpc_wrapper/client/detail/: client_state.hpp
include/grpc_wrapper/server/: async_server.hpp  server.hpp
include/grpc_wrapper/server/detail/: async_rpc_handler_interface.hpp  non_stream_rpc_handler.hpp  tag.hpp
include/kademlia/: bucket.hpp  connection_info.hpp  identifier.hpp  kademlia.hpp  repository.hpp  routing_table.hpp  sys_def.hpp  utils.hpp
include/kademlia/models/: find_node_answ.hpp
include/kademlia/rpc/: client.hpp  service.hpp
include/linked_data/: block.hpp  dag_node.hpp  link.hpp  merkle_dag.hpp  node.hpp  proto_block.hpp
include/multiformats/: cid.hpp  multiaddr.hpp  multihash.hpp
include/repo/: config.hpp  repo.hpp
include/repo/block_storage/: block_storage.hpp
include/repo/gc/: gc.hpp
include/repo/pinner/: pin-manager.hpp
include/rpc/: forward_declarations.hpp
include/rpc/client/: client.hpp
include/rpc/client/detail/: client_state.hpp
include/rpc/server/: async_server.hpp
include/rpc/server/detail/: async_rpc_handler_interface.hpp  non_stream_rpc_handler.hpp  tag.hpp
project/: client.cpp  server.cpp
proto/: route_service.proto
proto/Data/: ProtoBlock.proto  ProtoLink.proto
proto/api/: api.proto
proto/cli/: ProtoResponseEmitter.proto
proto/config/: ProtoConfig.proto
proto/data/: ProtoData.proto  ProtoNode.proto
proto/files/: ProtoData.proto  unixfs.proto
proto/kademlia/: kademlia.proto
proto/pinner/: ProtoPinner.proto
src/: CMakeLists.txt  CMakeLists_template.txt  add.c  main.c  main.cpp  math.c
src/cli/: CMakeLists.txt  cli.cpp  cli_templ.cpp
src/cli/commands/: CMakeLists.txt  command.cpp  command_templ.cpp  commands.cpp  response_emitter.cpp
src/common/: CMakeLists.txt  context.cpp  hasher.cpp  status.cpp
src/common/logger/: CMakeLists.txt  logger.cpp
src/common/multiformats/: CMakeLists.txt  cid.cpp  multihash.cpp
src/common/utils/: CMakeLists.txt  filesystem.cpp  hex_util.cpp  prefix_reader.cpp  repo.cpp
src/config/: CMakeLists.txt  config.cpp
src/core/: CMakeLists.txt  core.cpp
src/core/commands/: CMakeLists.txt  root.cpp
src/core/commands/debug/: cid.cpp
src/core/context/: CMakeLists.txt  context.cpp
src/core/core_api/: CMakeLists.txt  local_api.cpp  remote_api.cpp
src/datastore/: CMakeLists.txt  ds_fs.cpp  ds_fs_templ.cpp
src/exchange/: CMakeLists.txt
src/exchange/block_service/: CMakeLists.txt  block_service.cpp
src/exchange/block_swap/: CMakeLists.txt  block_swap.cpp  client.cpp
src/exchange/block_swap/rpc/: service.cpp
src/files/: CMakeLists.txt
src/files/chunker/: CMakeLists.txt  chunker.cpp
src/files/unixfs/: CMakeLists.txt  unixfs.cpp
src/files/unixfs/proto_manager/: CMakeLists.txt  proto-manager.cpp
src/grpc_wrapper/client/: CMakeLists.txt  client.cpp  client_templ.cpp
src/grpc_wrapper/server/: CMakeLists.txt  async_server.cpp  server.cpp
src/grpc_wrapper/server/detail/: non_stream_rpc_handler.cpp
src/hello/: CMakeLists.txt  hello.cpp  hello.hpp
src/kademlia/: CMakeLists.txt  bucket.cpp  identifier.cpp  kademlia.cpp  routing_table.cpp  server.cpp
src/kademlia/models/: find_node_answ.cpp
src/kademlia/rpc/: client.cpp  service.cpp
src/linked_data/: CMakeLists.txt  block.cpp  dag_node.cpp  merkle_dag.cpp  node.cpp  proto_block.cpp
src/multiformats/: CMakeLists.txt  cid.cpp  multihash.cpp
src/proto/: CMakeLists.txt
src/repo/: CMakeLists.txt  repo.cpp  repo_templ.cpp
src/repo/block_storage/: CMakeLists.txt  block_storage.cpp
src/repo/gc/: CMakeLists.txt  gc.cpp
src/repo/pinner/: CMakeLists.txt  pin-manager.cpp
src/rpc/client/: client.cpp
src/rpc/server/: async_server.cpp
src/rpc/server/detail/: non_stream_rpc_handler.cpp
src/utils/multiformats/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: add_test.c  math_test.c
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/datastore/: CMakeLists.txt
tests/src/hello/: CMakeLists.txt  hello_test.cpp
tests/src/repo/: CMakeLists.txt  repo_test.cpp
tests/src/repo/block_storage/: CMakeLists.txt  block_storage_test.cpp
tests/src/repo/gc/: CMakeLists.txt  gc_test.cpp
tests/src/repo/pinner/: CMakeLists.txt  pinner_test.cpp
